Search PVOutput for all systems in a given geography
Added the grid_search.py module which can be used to generate grids of coordinates that can be used to efficiently search a given geography (countries, bounding box, radius) for PVOutput systems using hexagonal tiling.
Added an example script demonstrating usage, including drill-down when API returns 30 systems.

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,14 @@
+pyproj
+pyshp
+shapely
+cython>0.15.1
+cartopy
+geopandas
 pytest
 pyyaml
 tables
-pandas
+numpy
+pandas>=1.0.0
 matplotlib
 jupyter
 urllib3
