fix for pytest code coverage directory

--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -4,3 +4,6 @@ on: [push]
 jobs:
   call-run-python-tests:
     uses: openclimatefix/.github/.github/workflows/python-test.yml@main
+    with:
+      # pytest-cov looks at this folder
+      pytest_cov_dir: "pvoutput"
