--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -7,3 +7,5 @@ jobs:
     with:
       # pytest-cov looks at this folder
       pytest_cov_dir: "pvoutput"
+      # these packages are installed. They are needed for 'cartopy'
+      sudo_apt_install: 'libgeos-dev libproj-dev'
