--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -2,6 +2,7 @@
 commit = True
 tag = True
 current_version = 0.1.29
+message = Bump version: {current_version} → {new_version} [skip ci]
 
 [bumpversion:file:setup.py]
 search = version="{current_version}"
